--- a/gleam.toml
+++ b/gleam.toml
@@ -10,14 +10,14 @@ version = "1.0.0"
 # links = [{ title = "Website", href = "https://gleam.run" }]
 #
 # For a full reference of all the available options, you can have a look at
-# https://gleam.run/writing-gleam/gleam-toml/. 
+# https://gleam.run/writing-gleam/gleam-toml/.
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
 gleam_json = "~> 1.0"
 simplifile = "~> 1.6"
-gleam_bbmustache = "~> 2.2"
 birl = "~> 1.6"
+gsv = "~> 1.3"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
